<resources>
    <string name="app_name">NASA Project</string>
    <string name="other">Other</string>
    <string name="mars">Mars</string>
    <string name="favorites">Favorites</string>
    <string name="earth">Earth</string>
    <string name="picture_of_mars">Picture of Mars</string>
    <string name="picture_of_earth">Picture of Earth</string>
    <string name="picture_of_a_nebula">Picture of a nebula</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="caption">Caption</string>
</resources>